--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -2,3 +2,9 @@
 php_admin_value[memory_limit] = -1
 php_admin_value[post_max_size] = 0
 php_admin_value[upload_max_filesize] = 10G
+
+;try ondemand process manager
+pm = ondemand
+pm.max_children = 5
+pm.process_idle_timeout = 10s
+pm.max_requests = 200
