chown staged code in flight to prod

--- a/setup-hashtopolis.yml
+++ b/setup-hashtopolis.yml
@@ -61,14 +61,6 @@
       repo: "{{ hashtopolis_repo }}"
       dest: "{{ staging_path }}/git"
 
-  - name: Set staged code as owned by install_user
-    file:
-      path: "{{ staging_path }}/git/src"
-      owner: "{{ install_user }}"
-      group: "{{ install_group }}"
-      state: directory
-      recurse: yes
-
   - name: Check if application has been installed already
     stat:
       path: "{{ install_path }}/inc/conf.php"
@@ -78,6 +70,8 @@
     synchronize:
       src: "{{ staging_path }}/git/src/"
       dest: "{{ install_path }}/"
+      rsync_opts:
+        - "--chown={{ install_user }}:{{ install_group }}"
       delete: yes
     when: app_installed.stat.exists == False
     delegate_to: "{{ inventory_hostname }}"
@@ -88,5 +82,6 @@
       dest: "{{ install_path }}/"
       rsync_opts:
         - "--exclude=/install"
+        - "--chown={{ install_user }}:{{ install_group }}"
     when: app_installed.stat.exists == True
     delegate_to: "{{ inventory_hostname }}"
